# kernel_k

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: linker.ld  makefile  specification.json
src/binaries/: boot.asm
src/bootloader/: a20enable.asm  boot.asm  gdt.asm  print.asm  print_32.asm
src/kernel/c/: kernel.c  paging.c
src/kernel/c/include/: paging.h
src/kernel/rust/: main.rs
src/kernel/rust/io/: disk.rs  mod.rs
src/kernel/rust/vga/: mod.rs
