[package]
name = "kernel_k"
version = "0.1.0"
authors = ["Daksh14 <somilsharma627@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
path = "src/kernel/rust/main.rs"

[unstable]
build-std = ["core", "compiler_builtins", "alloc"]

[profile.dev]
panic = "abort"
overflow-checks = false

[profile.release]
panic = "abort"
overflow-checks = false
